funcoes,arrays & loops

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Escolha um ITEM</h1>
+     <ul>
+        <li>1 - Sumo</li>
+        <li>2 - Agua Gelada</li>
+        <li>3 - Gelado</li>
+        <li>4 - Chama o Empregado</li>
+     </ul>
+<button onclick="pedir()">Pedir</button>
+    <script src="./script.js"></script>
 </body>
 </html>
